<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/support_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/cardview_light_background"
        app:cardBackgroundColor="@color/dark_brown"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/po_name"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text="@string/Product_Owner"
                android:textColor="@color/white"
                android:textSize="14dp" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text="@string/email"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/emailPO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text="burim.vrella@kotlin.com"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text="@string/tel_nr"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tel_nrPO"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/support_cardview_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/cardview_light_background"
        app:cardBackgroundColor="@color/dark_brown"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rdbtn_Owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/owner"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rdbtn_Support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_support"
                    android:textColor="@color/black" />

            </RadioGroup>


            <EditText
                android:id="@+id/txt_supportMsg"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_marginVertical="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:background="@drawable/edit_textbox"
                android:ems="15"
                android:gravity="start|top"
                android:padding="8dp"
                android:hint="@string/message"
                android:textColorHint="@color/white"
                android:inputType="textMultiLine"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_sendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner"
        android:text="@string/sendEmail"
        android:textColor="@color/white"
        />

</LinearLayout>