<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/support_cardview_Message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/cardview_light_background"
    app:cardBackgroundColor="@color/dark_brown"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:contentPadding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taste"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"/>

        <RatingBar
            android:id="@+id/comment_taste"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:clickable="false"
            android:numStars="10"
            android:progressTint="@color/golden"
            android:rating="5"
            android:stepSize="0.5"
            android:layout_marginLeft="7dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"/>

        <RatingBar
            android:id="@+id/comment_cost"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:numStars="10"
            android:progressTint="@color/golden"
            android:rating="5"
            android:stepSize="0.5"
            android:layout_marginLeft="7dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availability"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"/>

        <RatingBar
            android:id="@+id/comment_availability"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:numStars="10"
            android:progressTint="@color/golden"
            android:rating="5"
            android:stepSize="0.5"
            android:layout_marginLeft="7dp"/>


        <TextView
            android:id="@+id/comment_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>